--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
         <br>
         <button title="S For Snake" onclick="s()">S</button>
         <button title="T For Tomato" onclick="t()">T</button>
-        <button title="V For Ven" onclick="u()">U</button>
+        <button title="U For Umbrella" onclick="u()">U</button>
         <br>
-        <button title="" onclick="v()">V</button>
+        <button title="V For Ven" onclick="v()">V</button>
         <button title="W For Watch" onclick="w()">W</button>
         <button title="X For x" onclick="x()">X</button>
         <br>
