--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <br>
         <button title="V For Ven" onclick="v()">V</button>
         <button title="W For Watch" onclick="w()">W</button>
-        <button title="X For x" onclick="x()">X</button>
+        <button title="X For X-Ray" onclick="x()">X</button>
         <br>
         <button title="Y For Yoghurt" onclick="y()">Y</button>
         <button title="Z For Zebra" onclick="z()">Z</button>
